kubernetes/deployment/services/dashboard/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
spec:
  parentRefs:
    - name: services-gateway
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: dashboard
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
